src/main/java/com/example/coursemanagement/services/exceptions/errors/ValidationException.java
package com.example.coursemanagement.services.exceptions.errors;

public class ValidationException extends RuntimeException {
    public ValidationException(String message) {
        super(message);
    }
}
